--- a/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -1,1 +1,23 @@
-<p>diretiva-ngif works!</p>
+<h3>*ngIf</h3>
+
+<div *ngIf="mostrarCursos">
+  Lista de cursos aqui.
+</div>
+
+<div *ngIf="!mostrarCursos">
+  Não existem cursos para serem listados.
+</div>
+
+<br>
+
+<button (click)="onMostrarCursos()">Mostrar ou esconder cursos</button>
+
+
+<h5>hidden como alternativa</h5>
+<div [hidden]="mostrarCursos">
+  Lista de cursos aqui.
+</div>
+
+<div [hidden]="!mostrarCursos">
+  Não existem cursos para serem listados.
+</div>
