--- a/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -21,3 +21,12 @@
 <div [hidden]="!mostrarCursos">
   Não existem cursos para serem listados.
 </div>
+
+
+<ng-template [ngIf]="mostrarCursos">
+  <div>Lista de cursos aqui.</div>
+</ng-template>
+
+<div template="ngIf mostrarCursos">
+  Lista de cursos aqui
+</div>
