--- a/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
+++ b/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
@@ -20,3 +20,16 @@
   <p *ngSwitchCase="'lista'">Modo Lista ativado</p>
   <p *ngSwitchDefault>Modo Home ativado</p>
 </div>
+
+
+<div class="container" [ngSwitch]="aba">
+  <ng-template [ngSwitchCase]="'mapa'">
+    <p>Modo Mapa ativado</p>
+  </ng-template>
+  <ng-template [ngSwitchCase]="'lista'">
+    <p>Modo Lista ativado</p>
+  </ng-template>
+  <ng-template [ngSwitchCase]="'home'">
+    <p>Home</p>
+  </ng-template>
+</div>
