--- a/src/app/diretiva-ngclass/diretiva-ngclass.component.html
+++ b/src/app/diretiva-ngclass/diretiva-ngclass.component.html
@@ -1,1 +1,7 @@
-<p>diretiva-ngclass works!</p>
+
+<div class="quadrado"
+    [ngClass]="{'preenchido' : meuFavorito, 'contorno' : !meuFavorito}"
+    (click)="onClick()"
+>
+    &nbsp;
+</div>
