--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,15 @@
 <!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
 
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
-<app-operador-elvis></app-operador-elvis>
+<!-- <app-operador-elvis></app-operador-elvis> -->
+<app-exemplo-ng-content>
+    <div class="titulo" style="background-color: blue; color: white;">
+        Título
+    </div>
+    <div class="conteudo" style="background-color: red; color: white;">
+        Conteúdo do ng-content
+    </div>
+    <div class="conteudo" style="background-color: red; color: white;">
+        Conteúdo do ng-content
+    </div>
+</app-exemplo-ng-content>
