diretivas customizadas com ElementRef e Renderer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
 <!-- <app-operador-elvis></app-operador-elvis> -->
-<app-exemplo-ng-content>
+<!-- <app-exemplo-ng-content>
     <div class="titulo" style="background-color: blue; color: white;">
         Título
     </div>
@@ -18,4 +18,5 @@
     <div class="conteudo" style="background-color: red; color: white;">
         Conteúdo do ng-content
     </div>
-</app-exemplo-ng-content>
+</app-exemplo-ng-content> -->
+<app-diretivas-customizadas></app-diretivas-customizadas>
