--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -5,3 +5,7 @@
 <button fundoAmarelo>
     Botão com fundo amarelo
 </button>
+
+<p highlightMouse>
+    Texto com highlight quando passo o mouse.
+</p>
