Diretiva customizada com Input property e PropertyBinding

--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -9,3 +9,7 @@
 <p highlightMouse>
     Texto com highlight quando passo o mouse.
 </p>
+
+<p [highlight]="'red'" [deafultColor]="'grey'">
+    Texto com highlight com cores customizadas.
+</p>
