diretiva customizada de estrutura com TamplateRef e ViewContainerRef

--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -13,3 +13,16 @@
 <p [highlight]="'red'" [deafultColor]="'grey'">
     Texto com highlight com cores customizadas.
 </p>
+
+<h5>Diretiva Estrutura customizada - ngElse</h5>
+
+<div *ngIf="mostrarCursos">
+    Lista de cursos aqui.
+</div>
+<div *ngElse="mostrarCursos">
+    Não existe cursos para serem listados.
+</div>
+<br>
+<button (click)="onMostrarCursos()">
+    Mostrar ou esconder cursos
+</button>
